--- a/File Vari/allassistanceservices.html
+++ b/File Vari/allassistanceservices.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title> Apple iPhone SE</title>
+<title>All Assistance Services</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="devicecontent.css" rel="stylesheet">
+ <link href="allassistanceservices.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -85,9 +85,9 @@
 							</ul>
 					</li>
 					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
+						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Assistance Service</a>
 							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="#">All Assistance Services</a></li>
+								<li class="active"><a class="menu-title" href="#">All Assistance Services</a></li>
 								<li><a href="#">Line Management</a></li>
 								<li><a href="#">Monitoring Costs & Payments</a></li>
 								<li><a href="#">Technical Support</a></li>
@@ -100,131 +100,86 @@
 </nav>
 <!--END NAVBAR-->
 
-<!-- BREADCRUMB -->
+<!--DEVICES IMAGE -->
 <div class="container-fluid">
 	<div class="row">
-		<ol class="breadcrumb" >
-		  <li><a href="#">All Devices</a></li>
-		  <li><a href="#">Smartphones & Cellphones </a></li>
-		  <li class="active"> Apple iPhone SE </li>
-		</ol>
+		<div class="topimage">
+			<img src="../images/assistance.png">
+		</div>
 	</div>
 </div>
-<!-- END BREADCRUMB -->
 
+<!--DEVICES IMAGE -->
 
-<!-- DEVICE PRESENTATION -->
+<!-- CATEGORIES -->
 <div class="container-fluid">
 	<div class="row">
-		<div class="devpresentation">
-			<div class="col-xs-5">
-				<img src="../images/iPhoneSE.jpg" alt=""> 
-			</div>
-			<div class="col-xs-7">
-				<legend class="devicename"> <b>Apple</b> iPhone SE </legend>
-				<ul class="speclist">
-					<li><i class="fa fa-tablet fa-2x"></i> &nbsp; 4.0"</li>
-					<li><i class="fa fa-stop fa-2x"></i> &nbsp; 2GB RAM </li>
-					<li><i class="fa fa-camera fa-2x"></i> &nbsp; 12 MP </li>
-					<li><i class="fa fa-battery-three-quarters fa-2x"></i> &nbsp; 1624mAh </li>
-					<li> Price: 36 instalment of 21,94 €/month </li>
-				</ul>
-				<div class="row">
-					<div class="col three">				
-						<a href="#" class="btn btn-blue disabled">Buy now</a>			
+		<div class="allas">
+			<div class="categories">
+				<div class="col-xs-3">
+					<div class="service">
+						<a href="#">
+							<div class="thumbnail">
+								<img src="../images/linemanagement.png" alt="">
+							</div>
+							<h4>Line management</h4>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-3">
+					<div class="service">
+						<a href="#">
+							<div class="thumbnail">
+								<img src="../images/costpayments.png" alt="">
+							</div>
+							<h4>Monitoring costs and payments</h4>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-3">
+					<div class="service">
+						<a href="#">
+							<div class="thumbnail">
+								<img src="../images/techsupport.png" alt="">
+							</div>
+							<h4>Technical support</h4>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-3">
+					<div class="service">
+						<a href="#">
+							<div class="thumbnail">
+								<img src="../images/smartassistance.png" alt="">
+							</div>
+							<h4>Smart Life assistance</h4>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- END DEVICE PRESENTATION -->
+<!-- END CATEGORIES -->
 
-<!-- TECNICAL SPECIFICATIONS -->
+<!-- HIGHLIGHTS-->
 <div class="container-fluid">
 	<div class="row">
-		<div class="techspecs">
-			<legend> Technical Specifications </legend>
-			<table>
-			  <tr>
-				<td>Network</td>
-				<td>4G LTE</td>
-			  </tr>
-			  <tr>
-				<td>Comms</td>
-				<td>Wi Fi 802.11a/b/g/n/ac</td>
-			  </tr>
-			  <tr>
-				<td>GPS</td>
-				<td>A-GPS, GLONASS</td>
-			  </tr>
-			  <tr>
-				<td>Display</td>
-				<td>LED-backlit IPS LCD, capacitive touchscreen, 16M colors, 4.0", 640 x 1136 pixels</td>
-			  </tr>
-			  <tr>
-				<td>Dimensions</td>
-				<td>123.8 x 58.6 x 7.6 mm</td>
-			  </tr>
-			  <tr>
-				<td>Weight</td>
-				<td>113 g</td>
-			  </tr>
-			  <tr>
-				<td>Camera</td>
-				<td>12 MP, f/2.2, 29mm, phase detection autofocus, dual-LED (dual tone) flash</td>
-			  </tr>
-			  <tr>
-				<td>Video</td>
-				<td>2160p@30fps, 1080p@30/60fps, 1080p@120fps, 720p@240fps</td>
-			  </tr>
-			  <tr>
-				<td>Internal Memory</td>
-				<td>16 GB, 2 GB RAM</td>
-			  </tr>
-			  <tr>
-				<td>Processor</td>
-				<td>Chip A9 64-bit, Apple motion coprocessor M9 </td>
-			  </tr>
-			  <tr>
-				<td>OS</td>
-				<td>iOS 9.3.2</td>
-			  </tr>
-			  <tr>
-				<td>Battery</td>
-				<td>Non-removable Li-Po 1624 mAh battery</td>
-			  </tr>
-			  <tr>
-				<td>Sensors</td>
-				<td>Fingerprint, accelerometer, gyro, proximity, compass</td>
-			  </tr>
-			</table>
+		<div class="highlights">
+			<legend> Highlights</legend>
+			<ul>
+				<li><a href="#" > Activation of residential line ></a></li>
+				<li><a href="#" class="disabled"> MyMMobile: client areas ></a></li>
+				<li><a href="#" class="disabled"> Verify online your credit ></a></li>
+				<li><a href="#" class="disabled"> Modem: first installation ></a></li>
+				<li><a href="#" class="disabled"> Connecting to the internet via mobile ></a></li>
+				<li><a href="#" class="disabled"> How to pay the residential line bill ></a></li>
+			</ul>
 		</div>
 	</div>
 </div>
-<!-- END TECHNICAL SPECIFICATIONS -->
+<!-- END HIGHLIGHTS-->
 
-<!-- RELATED ASSISTANCE SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="assistanceservice">
-			<legend> Related Assistance Service </legend>
-			<a href="#"> Technical support </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED ASSISTANCE SERVICE -->
-
-<!-- RELATED SL SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="slservice">
-			<legend> Related Smart Life Service </legend>
-			<a href="#"> Whatever </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED SL SERVICE -->
 
 <!--FOOTER-->
 	<div class="footer">
