--- a/File Vari/alldevices.html
+++ b/File Vari/alldevices.html
@@ -118,7 +118,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="smartphones">
-						<h3> Smartphones & Cellphones </h3>
+						<legend> Smartphones & Cellphones </legend>
 						<ul class="thumbnails">
 							<li class="col-xs-3">
 								<div class="device">
@@ -127,8 +127,13 @@
 										<p>Galaxy S7</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/SAMSUNG_S7.jpg" alt=""></a>
-									</div>									
+										<img src="../images/SAMSUNG_S7.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -138,7 +143,12 @@
 										<p>Iphone SE 16GB </p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/iPhoneSE.jpg" alt=""></a>
+										<img src="../images/iPhoneSE.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
 									</div>									
 								</div>
 							</li>
@@ -149,7 +159,12 @@
 										<p>P9</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/huawei-p9.jpg" alt=""></a>
+										<img src="../images/huawei-p9.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
 									</div>
 								</div>
 							</li>
@@ -166,7 +181,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="tablets">
-						<h3>Tablets & PCs</h3>
+						<legend>Tablets & PCs</legend>
 						<ul class="thumbnails">
 							<li class="col-xs-3">
 								<div class="device">
@@ -175,7 +190,12 @@
 										<p>Galaxy TAB A 9.7</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/samsung-galaxy-tabA.jpg" alt=""></a>
+										<img src="../images/samsung-galaxy-tabA.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
 									</div>
 								</div>
 							</li>
@@ -186,8 +206,13 @@
 										<p>Ipad Pro 9.7"</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/APPLE_IPAD_PRO_97.jpg" alt=""></a>
-									</div>									
+										<img src="../images/APPLE_IPAD_PRO_97.jpg" alt="">
+									</div>		
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -197,7 +222,12 @@
 										<p>Mediapad T1 10 LTE</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/huawei-t1-10.jpg" alt=""></a>
+										<img src="../images/huawei-t1-10.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
 									</div>
 								</div>
 							</li>
@@ -214,7 +244,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="networking">
-						<h3> Modem & Networking </h3>
+						<legend> Modem & Networking </legend>
 						<ul class="thumbnails">
 							<li class="col-xs-3">
 								<div class="device">
@@ -223,8 +253,13 @@
 										<p>Repeater Wi-Fi AC750</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/zyxel1.jpg" alt=""></a>
-									</div>									
+										<img src="../images/zyxel1.jpg" alt="">
+									</div>	
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -234,8 +269,13 @@
 										<p>FRITZ!WLAN Repeater 1750E</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/avd1.jpg" alt=""></a>
-									</div>									
+										<img src="../images/avd1.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -245,8 +285,13 @@
 										<p>ERA Plus 900</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/tecnoware900.jpg" alt=""></a>
-									</div>									
+										<img src="../images/tecnoware900.jpg" alt="">
+									</div>	
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>	
 							<li class="col-xs-3">
@@ -262,7 +307,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="smartliving">
-						<h3> TV & Smart Living</h3>
+						<legend> TV & Smart Living</legend>
 						<ul class="thumbnails">
 							<li class="col-xs-3">
 								<div class="device">
@@ -271,8 +316,13 @@
 										<p>Smart Home</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/dlinkSmartHome.jpg" alt=""></a>
-									</div>									
+										<img src="../images/dlinkSmartHome.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -282,8 +332,13 @@
 										<p>Watch Sport 38</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/applesport.jpg" alt=""></a>
-									</div>									
+										<img src="../images/applesport.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
@@ -293,8 +348,13 @@
 										<p>Solo 2 Headphones</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/beats.jpg" alt=""></a>
-									</div>									
+										<img src="../images/beats.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>	
 							<li class="col-xs-3">
@@ -310,39 +370,54 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="outlet">
-						<h3> Outlet</h3>
+						<legend> Outlet</legend>
 						<ul class="thumbnails">
 							<li class="col-xs-3">
 								<div class="device">
 									<div class="caption">
+										<h4>Microsoft</h4>
+										<p>Lumia 950</p>
+									</div>
+									<div class="thumbnail">
+										<img src="../images/microsoft-LUMIA950.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="col-xs-3">
+								<div class="device">
+									<div class="caption">
 										<h4>Samsung</h4>
-										<p>Galaxy S7</p>
+										<p>Galaxy A5</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/SAMSUNG_S7.jpg" alt=""></a>
-									</div>									
+										<img src="../images/GALAXY_A5.jpg" alt="">
+									</div>
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>
 							<li class="col-xs-3">
 								<div class="device">
 									<div class="caption">
-										<h4>Apple</h4>
-										<p>Watch Sport 38</p>
+										<h4>Alcatel</h4>
+										<p>ONE TOUCHE Pixi3 8</p>
 									</div>
 									<div class="thumbnail">
-										<a href="#"><img src="../images/applesport.jpg" alt=""></a>
-									</div>									
-								</div>
-							</li>
-							<li class="col-xs-3">
-								<div class="device">
-									<div class="caption">
-										<h4>Apple</h4>
-										<p>Ipad Pro 9.7"</p>
+										<img src="../images/alcatel-pixi3.jpg" alt="">
 									</div>
-									<div class="thumbnail">
-										<a href="#"><img src="../images/APPLE_IPAD_PRO_97.jpg" alt=""></a>
-									</div>									
+									<div class="row">
+										<div class="col three">				
+											<a href="#" class="btn btn-blue disabled">More details</a>			
+										</div>
+									</div>
 								</div>
 							</li>	
 							<li class="col-xs-3">
