--- a/File Vari/allsmartlifeservices.html
+++ b/File Vari/allsmartlifeservices.html
@@ -16,7 +16,7 @@
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="smartlifeservices.css" rel="stylesheet">
+ <link href="allsmartlifeservices.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
