--- a/File Vari/assistancecategory.html
+++ b/File Vari/assistancecategory.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title> D-Link Smart Home</title>
+<title>Line Management</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="devicecontent.css" rel="stylesheet">
+ <link href="assistanceservice.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -85,10 +85,10 @@
 							</ul>
 					</li>
 					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
+						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Assistance Service</a>
 							<ul class="dropdown-menu">
 								<li><a class="menu-title" href="#">All Assistance Services</a></li>
-								<li><a href="#">Line Management</a></li>
+								<li class="active"><a href="#">Line Management</a></li>
 								<li><a href="#">Monitoring Costs & Payments</a></li>
 								<li><a href="#">Technical Support</a></li>
 								<li><a href="#">Smart Life Assistance</a></li>							
@@ -104,93 +104,72 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">All Devices</a></li>
-		  <li><a href="#">TV & Smart Living</a></li>
-		  <li class="active">D-Link Smart Home </li>
+		  <li><a href="#">All Assistance Services</a></li>
+		  <li class="active"> Line Management </li>
 		</ol>
 	</div>
 </div>
 <!-- END BREADCRUMB -->
 
-
-<!-- DEVICE PRESENTATION -->
+<!-- CATEGORIES -->
 <div class="container-fluid">
 	<div class="row">
-		<div class="devpresentation">
-			<div class="col-xs-5">
-				<img src="../images/dlinkSmartHome.jpg" alt=""> 
-			</div>
-			<div class="col-xs-7">
-				<legend class="devicename"> <b>D-Link </b> Smart Home</legend>
-				<ul class="speclist">
-					<li><i class="fa fa-mobile fa-2x"></i> &nbsp; Turn Devices On/Off with Smart Plug</li>
-					<li><i class="fa fa-eye fa-2x"></i> &nbsp;Enhanced Motion Detection with Wi-Fi Motion Sensor </li>
-					<li> Price: 24 instalment of 5 €/month </li>
+		<div class="services">
+			<h3> LINE MANAGEMENT </h3>
+			<legend> RESIDENTIAL</legend>
+			<div class="servicetype">
+				<h3> Line management </h3>
+				<ul>
+					<li><a href="#" > Residential line activation</a></li>
+					<li><a href="#"  class="disabled"> Managing subscription</a></li>
+					<li><a href="#"  class="disabled" > Termination of contract</a></li>
 				</ul>
-				<div class="row">
-					<div class="col three">				
-						<a href="#" class="btn btn-blue disabled">Buy now</a>			
-					</div>
-				</div>
+				<h3> Managing phone services </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> Deactivation of residential line services</a></li>
+					<li><a href="#"  class="disabled"> Telephone books at your house</a></li>
+				</ul>
+			</div>
+			
+			<legend> MOBILE </legend>
+			<div class="servicetype">
+				<h3> Managing your SIM card </h3>
+				<ul>
+					<li><a href="#"  class="disabled">From subscription to rechargeable phone card</a></li>
+					<li><a href="#"  class="disabled">From rechargable phone card to subscription  </a></li>
+					<li><a href="#"  class="disabled"> MMS</a></li>
+				</ul>
+				<h3> Activation and termination of content services </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> Verify line coverage</a></li>
+				</ul>
+				<h3> Managing mobile line when abroad </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> Verify your credit while you are abroad</a></li>
+					<li><a href="#"  class="disabled"> How to use Internet while abroad</a></li>
+				</ul>
+				<h3> All way of recharging your phone card </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> All way of recharging your phone card</a></li>
+					<li><a href="#"  class="disabled"> Fast recharge</a></li>
+				</ul>
+			</div>
+			
+			<legend>HELP MOVING TO M-MOBILE</legend>
+			<div class="servicetype">
+				<h3> New Smart for home and mobile </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> M-Mobile Smart</a></li>
+				</ul>
+				<h3> Moving to M-Mobile from a different mobile line</h3>
+				<ul>
+					<li><a href="#" class="disabled"> How to enter M-Mobile with your mobile line </a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- END DEVICE PRESENTATION -->
-
-<!-- TECNICAL SPECIFICATIONS -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="techspecs">
-			<legend> Technical Specifications </legend>
-			<table>
-			  <tr>
-				<td>Wi-Fi Standard</td>
-				<td>802.11b/g/n</td>
-			  </tr>
-			  <tr>
-				<td>Wi-Fi Security</td>
-				<td>WPA/WPA2</td>
-			  </tr>
-			  <tr>
-				<td>Dimensions</td>
-				<td>9.7 x 7.7 x 6.2 cm</td>
-			  </tr>
-			  <tr>
-				<td>Weight</td>
-				<td>180 g</td>
-			  </tr>
-			  <tr>
-				<td>Included in the Price</td>
-				<td>Smart Plug (DSP-W215), Wi-Fi Motion Sensor (DCH-S150), Monitor HD (DCS-935L)</td>
-			  </tr>
-			</table>
-		</div>
-	</div>
-</div>
-<!-- END TECHNICAL SPECIFICATIONS -->
-
-<!-- RELATED ASSISTANCE SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="assistanceservice">
-			<legend> Related Assistance Service </legend>
-			<a class="disabled"> Configuration Guide </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED ASSISTANCE SERVICE -->
-
-<!-- RELATED SL SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="slservice">
-			<legend> Related Smart Life Service </legend>
-			<a href="#"> Whatever </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED SL SERVICE -->
+<!-- END CATEGORIES -->
 
 <!--FOOTER-->
 	<div class="footer">
