--- a/File Vari/assistancecontent.html
+++ b/File Vari/assistancecontent.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title> Samsung Galaxy TAB A 9.7</title>
+<title>Spotify Premium subscription</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="devicecontent.css" rel="stylesheet">
+ <link href="assistanceservice.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -104,127 +104,31 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">All Devices</a></li>
-		  <li><a href="#">Tablets & PCs</a></li>
-		  <li class="active">Samsung Galaxy TAB A 9.7 </li>
+		  <li><a href="#">All Assistance Services</a></li>
+		  <li><a href="#">Smart Life Assistance</a></li>
+		  <li class="active">Spotify Premium subscription</li>
 		</ol>
 	</div>
 </div>
 <!-- END BREADCRUMB -->
 
-
-<!-- DEVICE PRESENTATION -->
+<!-- CATEGORIES -->
 <div class="container-fluid">
 	<div class="row">
-		<div class="devpresentation">
-			<div class="col-xs-5">
-				<img src="../images/samsung-galaxy-tabA.jpg" alt=""> 
-			</div>
-			<div class="col-xs-7">
-				<legend class="devicename"> <b>Samsung</b> Galaxy TAB A 9.7 </legend>
-				<ul class="speclist">
-					<li><i class="fa fa-tablet fa-2x"></i> &nbsp; 9.7"</li>
-					<li><i class="fa fa-stop fa-2x"></i> &nbsp; 2GB RAM </li>
-					<li><i class="fa fa-camera fa-2x"></i> &nbsp; 5 MP </li>
-					<li><i class="fa fa-battery-three-quarters fa-2x"></i> &nbsp; 6000mAh </li>
-					<li> Price: 299,90 € </li>
-				</ul>
-				<div class="row">
-					<div class="col three">				
-						<a href="#" class="btn btn-blue disabled">Buy now</a>			
-					</div>
-				</div>
-			</div>
+		<div class="servicecontent">
+			<h3> SPOTIFY PREMIUM - HOW TO PAY THE SUBSCRIPTION </h3>
+			<legend> Description</legend>
+			<p> Spotify Premium is a music streaming service that offers you milions of tracks and playlists. <br>
+				It is accessible via app on PC, Tablet and Smartphone. You can download directly from <a href="http://www.spotify.com">www.spotify.com</a>
+				if you are on PC or use the Google PlayStore for Android or the App Store for iOS.<br><br>
+				The cost of the subscription to Spotify Premium is 9.99€/month. It will be added on your invoice if you
+				are a subscription client or it will be removed from your credit on your phone card if you are a
+				rechargeable phone card client.
+			</p>
 		</div>
 	</div>
 </div>
-<!-- END DEVICE PRESENTATION -->
-
-<!-- TECNICAL SPECIFICATIONS -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="techspecs">
-			<legend> Technical Specifications </legend>
-			<table>
-			  <tr>
-				<td>Network</td>
-				<td>LTE/HSDPA/HSUPA</td>
-			  </tr>
-			  <tr>
-				<td>Comms</td>
-				<td>Wi-Fi 802.11 a/b/g/n - Bluetooth 4.0 - micro USB</td>
-			  </tr>
-			  <tr>
-				<td>GPS</td>
-				<td>A-GPS, GLONASS</td>
-			  </tr>
-			  <tr>
-				<td>Display</td>
-				<td>9.7” TFT, 1024x768</td>
-			  </tr>
-			  <tr>
-				<td>Dimensions</td>
-				<td>242.5 x 166.8 x 7.5 mm</td>
-			  </tr>
-			  <tr>
-				<td>Weight</td>
-				<td>453 g</td>
-			  </tr>
-			  <tr>
-				<td>Camera</td>
-				<td>5 MP, autofocus</td>
-			  </tr>
-			  <tr>
-				<td>Video</td>
-				<td>720p@30fps</td>
-			  </tr>
-			  <tr>
-				<td>Internal Memory</td>
-				<td>32 GB, 2 GB RAM</td>
-			  </tr>
-			  <tr>
-				<td>Processor</td>
-				<td>Snapdragon 410 QuadCore da 1.2 GHz</td>
-			  </tr>
-			  <tr>
-				<td>OS</td>
-				<td>Android OS, v6.0 (Marshmallow)</td>
-			  </tr>
-			  <tr>
-				<td>Battery</td>
-				<td>Non-removable Li-Ion 6000 mAh battery</td>
-			  </tr>
-			  <tr>
-				<td>Sensors</td>
-				<td>Accelerometer, compass</td>
-			  </tr>
-			</table>
-		</div>
-	</div>
-</div>
-<!-- END TECHNICAL SPECIFICATIONS -->
-
-<!-- RELATED ASSISTANCE SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="assistanceservice">
-			<legend> Related Assistance Service </legend>
-			<a href="#"> Technical support </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED ASSISTANCE SERVICE -->
-
-<!-- RELATED SL SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="slservice">
-			<legend> Related Smart Life Service </legend>
-			<a href="#"> Whatever </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED SL SERVICE -->
+<!-- END CATEGORIES -->
 
 <!--FOOTER-->
 	<div class="footer">
