--- a/File Vari/index.html
+++ b/File Vari/index.html
@@ -39,7 +39,10 @@
 				<ul class="nav navbar-nav">
 					<li>
 						<a class="active" href="#">Consumer</a>
-					</li>	
+					</li>
+					<li>
+						<a href="#">Who We Are</a>
+					</li>					
 					<li>
 						<a href="#">The Group</a>
 					</li>
@@ -116,7 +119,7 @@
                 <img data-u="image" src="../images/slide2.jpg" />
             </div>
 			<div data-p="225.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image" src="../images/slide4.jpg" />
+                <img data-u="image" src="../images/slide6.jpg" />
             </div>
         </div>
         <!-- Bullet Navigator -->
@@ -224,28 +227,49 @@
 </div>
 	
 <!--SPOTIFY AD-->
-	<div class="container">
-		<div class="adv">
-			<img src="../images/girl-music.jpg" class="img-responsive">
-			<div>
-				<h3> Spotify Premium </h3>
-				<div class="advtext">Subscribe to Spotify with us, you have access to milions of tracks, themed playlists and much more, at a great discount!
-				</div> 
-				
-				<div class="row">
-					<div class="col three">				
-						<a href="#" class="btn btn-blue">Discover offer</a>			
+	<div class="container-fluid">
+		<div class="row">
+			<div class="adv">
+				<img src="../images/girl-music.jpg" class="img-responsive">
+				<div>
+					<h3> Spotify Premium </h3>
+					<div class="advtext">Subscribe to Spotify with us, you have access to milions of tracks, themed playlists and much more, at a great discount!
+					</div> 
+					
+					<div class="row">
+						<div class="col three">				
+							<a href="#" class="btn btn-blue">Discover offer</a>			
+						</div>
 					</div>
 				</div>
 			</div>
-			
 		</div>
 	</div>
 
 <!--FOOTER-->
-	<div class="footer">
-		<p>Copyright &copy; M-Mobile 2016</p>
+<div class="footer">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-4"> 
+				<p>Copyright &copy; M-Mobile 2016</p>
+			</div>
+			<div class="col-sm-4">
+				<h4> About M-Mobile </h4>
+				<ul>
+					<li><a href="#">M-Mobile Group</a></li>
+					<li><a href="#">News</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-4">
+				<h4> Follow Us </h4>
+				<ul>
+					<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>&nbsp;Facebook</a></li>
+					<li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i>&nbsp;Twitter</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
+</div>
 <!--END FOOTER-->
 </body>
 
