--- a/File Vari/promotions.html
+++ b/File Vari/promotions.html
@@ -219,7 +219,7 @@
 					<div class="col-xs-4">
 						<div class="device">
 							<div class="caption">
-								<h4>Daily Newspaper</h4>
+								<h4>Newspaper</h4>
 								<p>Corriere della Sera</p>
 							</div>
 							<div class="thumbnail">
@@ -240,7 +240,7 @@
 					<div class="col-xs-4">
 						<div class="device">
 							<div class="caption">
-								<h4>Daily Newspaper</h4>
+								<h4>Newspaper</h4>
 								<p>La Repubblica</p>
 							</div>
 							<div class="thumbnail">
