--- a/File Vari/costpayments.html
+++ b/File Vari/costpayments.html
@@ -10,13 +10,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title> Apple iPad Pro 9.7"</title>
+<title>Monitoring costs & payments</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
  <link href="style2.css" rel="stylesheet">
- <link href="devicecontent.css" rel="stylesheet">
+ <link href="assistanceservice.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -85,11 +85,11 @@
 							</ul>
 					</li>
 					<li class="dropdown">
-						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
+						<a class="dropdown-toggle active" data-toggle="dropdown" href="#">Assistance Service</a>
 							<ul class="dropdown-menu">
 								<li><a class="menu-title" href="#">All Assistance Services</a></li>
 								<li><a href="#">Line Management</a></li>
-								<li><a href="#">Monitoring Costs & Payments</a></li>
+								<li class="active"><a href="#">Monitoring Costs & Payments</a></li>
 								<li><a href="#">Technical Support</a></li>
 								<li><a href="#">Smart Life Assistance</a></li>							
 							</ul>
@@ -104,127 +104,51 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="#">All Devices</a></li>
-		  <li><a href="#">Tablets & PCs </a></li>
-		  <li class="active">Apple iPad Pro 9.7" </li>
+		  <li><a href="#">All Assistance Services</a></li>
+		  <li class="active"> Monitoring costs & payments </li>
 		</ol>
 	</div>
 </div>
 <!-- END BREADCRUMB -->
 
-
-<!-- DEVICE PRESENTATION -->
+<!-- CATEGORIES -->
 <div class="container-fluid">
 	<div class="row">
-		<div class="devpresentation">
-			<div class="col-xs-5">
-				<img src="../images/APPLE_IPAD_PRO_97.jpg" alt=""> 
-			</div>
-			<div class="col-xs-7">
-				<legend class="devicename"> <b>Apple</b> iPad Pro 9.7" </legend>
-				<ul class="speclist">
-					<li><i class="fa fa-tablet fa-2x"></i> &nbsp; 9.7"</li>
-					<li><i class="fa fa-stop fa-2x"></i> &nbsp; 2GB RAM </li>
-					<li><i class="fa fa-camera fa-2x"></i> &nbsp; 12 MP </li>
-					<li><i class="fa fa-battery-three-quarters fa-2x"></i> &nbsp; 5000mAh </li>
-					<li> Price: 1199,90 € </li>
+		<div class="services">
+			<h3> MONITORING COSTS & PAYMENTS</h3>
+			<legend> RESIDENTIAL</legend>
+			<div class="servicetype">
+				<h3> Receipts and payments </h3>
+				<ul>
+					<li><a href="#" > How to read the invoice of the residential line</a></li>
+					<li><a href="#"  class="disabled"> How to pay the invoice of the residential line</a></li>
+					<li><a href="#"  class="disabled" >Asking for a refund</a></li>
 				</ul>
-				<div class="row">
-					<div class="col three">				
-						<a href="#" class="btn btn-blue disabled">Buy now</a>			
-					</div>
-				</div>
+			</div>
+			
+			<legend> MOBILE </legend>
+			<div class="servicetype">
+				<h3>Rechargeable Phone Card </h3>
+				<ul>
+					<li><a href="#"  class="disabled">Verify your remaining credit</a></li>
+					<li><a href="#"  class="disabled">Payment method of mobile line invoice </a></li>
+					<li><a href="#"  class="disabled"> Promotions and automatic renewal of rechargable phone card clients</a></li>
+				</ul>
+				<h3> Subscription </h3>
+				<ul>
+					<li><a href="#"  class="disabled"> How to see your line's consumption</a></li>
+					<li><a href="#"  class="disabled"> Payment method of subscription invoice</a></li>
+					<li><a href="#"  class="disabled"> Promotions and automatic renewal of subscripted clients</a></li>
+				</ul>
+				<h3> Internet navigation </h3>
+				<ul>
+					<li><a href="#"  class="disabled">Rates for navigating Internet from Smartphone, PC and Tablet</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- END DEVICE PRESENTATION -->
-
-<!-- TECNICAL SPECIFICATIONS -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="techspecs">
-			<legend> Technical Specifications </legend>
-			<table>
-			  <tr>
-				<td>Network</td>
-				<td>4G LTE Advanced </td>
-			  </tr>
-			  <tr>
-				<td>Comms</td>
-				<td>Wi-Fi 802.11 a/b/g/n/ac, dual-band, hotspot</td>
-			  </tr>
-			  <tr>
-				<td>GPS</td>
-				<td>A-GPS, GLONASS</td>
-			  </tr>
-			  <tr>
-				<td>Display</td>
-				<td>LED-backlit IPS LCD, capacitive touchscreen, 16M colors, 9.7'', 1536 x 2048 pixels</td>
-			  </tr>
-			  <tr>
-				<td>Dimensions</td>
-				<td>240 x 169.5 x 6.1 mm</td>
-			  </tr>
-			  <tr>
-				<td>Weight</td>
-				<td>444 g</td>
-			  </tr>
-			  <tr>
-				<td>Camera</td>
-				<td>12 MP, f/2.2, 29mm, phase detection autofocus, dual-LED (dual tone) flash</td>
-			  </tr>
-			  <tr>
-				<td>Video</td>
-				<td>2160p@30fps, 1080p@30/60fps, 1080p@120fps, 720p@240fps</td>
-			  </tr>
-			  <tr>
-				<td>Internal Memory</td>
-				<td>256 GB, 2 GB RAM</td>
-			  </tr>
-			  <tr>
-				<td>Processor</td>
-				<td>Apple A9X</td>
-			  </tr>
-			  <tr>
-				<td>OS</td>
-				<td>iOS 9.3.2</td>
-			  </tr>
-			  <tr>
-				<td>Battery</td>
-				<td>5000mAh rechargeable lithium polymer battery</td>
-			  </tr>
-			  <tr>
-				<td>Sensors</td>
-				<td>Fingerprint, accelerometer, gyro, compass, barometer</td>
-			  </tr>
-			</table>
-		</div>
-	</div>
-</div>
-<!-- END TECHNICAL SPECIFICATIONS -->
-
-<!-- RELATED ASSISTANCE SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="assistanceservice">
-			<legend> Related Assistance Service </legend>
-			<a href="#"> Technical support </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED ASSISTANCE SERVICE -->
-
-<!-- RELATED SL SERVICE -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="slservice">
-			<legend> Related Smart Life Service </legend>
-			<a href="#"> Whatever </a>
-		</div>
-	</div>
-</div>
-<!-- END RELATED SL SERVICE -->
+<!-- END CATEGORIES -->
 
 <!--FOOTER-->
 	<div class="footer">
