--- a/File Vari/Separated files/footer.html
+++ b/File Vari/Separated files/footer.html
@@ -1,18 +1,18 @@
 <!--FOOTER-->
-<div class="footer">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-4"> 
+<div class="container-fluid">
+	<div class="row">
+		<div class="footer">
+			<div class="col-xs-4"> 
 				<p>Copyright &copy; M-Mobile 2016</p>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-xs-4">
 				<h4> About M-Mobile </h4>
 				<ul>
 					<li><a href="#">M-Mobile Group</a></li>
 					<li><a href="#">News</a></li>
 				</ul>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-xs-4">
 				<h4> Follow Us </h4>
 				<ul>
 					<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>&nbsp;Facebook</a></li>
