--- a/File Vari/Separated files/testdev.html
+++ b/File Vari/Separated files/testdev.html
@@ -3,6 +3,7 @@
 
 <head>
 
+
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,9 @@
   <link href="../bootstrap.new/css/bootstrap.css" rel="stylesheet">
 
  <!-- Custom CSS -->
- <link href="homepage.css" rel="stylesheet">
  <link href="footer.css" rel="stylesheet">
- 
+ <link href="homepage.css" rel="stylesheet">
+ <link href="navbar.css" rel="stylesheet">
  
  <!-- Font awesome icons -->
  
@@ -25,30 +26,99 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../slider.js"></script>
-  <script type="text/javascript" src="../slider/js/jssor.slider.mini.js"></script>
-  <script src="inclusion.js"></script>
+  <script src="slider.js"></script>
+  <script type="text/javascript" src="slider/js/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="slider/js/jssor.slider.mini.js"></script>
+  <script src="responsivecarousel.js"></script>
   
  </head>
 
 <body>
 
+<!--FIRST NAVBAR-->
+<nav class="navbar navbar-firstnav navbar-fixed-top" role="navigation">
+        <div class="container">
+				<ul class="nav navbar-nav">
+					<li>
+						<a class="active" href="#">Consumer</a>
+					</li>	
+					<li>
+						<a href="#">The Group</a>
+					</li>
+				</ul>
+		</div>
+        <!-- /.container -->
+</nav>
+<!--END FIRST NAVBAR-->
 
-<div class="include" data-include="navbar"></div>
-<div class="include" data-include="secondnavbar"></div>
+<!--SECOND NAVBAR-->
+<nav class="navbar navbar-secondnav navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+               <a class="navbar-brand" href="#"><img alt="Brand" src="..\images\logo.png"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                <ul class="nav navbar-nav">
+					<li><a href="#">Promotions</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Devices</a>
+							<ul class="dropdown-menu">
+								<li><a class="menu-title" href="#">All Devices</a></li>
+								<li><a href="#">Smartphones & Cellphones</a></li>
+								<li><a href="#">Tablets & PCs</a></li>
+								<li><a href="#">Modem & Networking</a></li>
+								<li><a href="#">TV & Smart Living</a></li>
+								<li><a href="#">Outlet</a></li>								
+							</ul>
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Smart Life</a>
+							<ul class="dropdown-menu">
+								<li><a class="menu-title" href="#">All SL Services</a></li>
+								<li><a href="#">TV & Entertainment</a></li>
+								<li><a href="#">Person</a></li>
+								<li><a href="#">Home & Family</a></li>
+								<li><a href="#">Health & Fitness</a></li>						
+							</ul>
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
+							<ul class="dropdown-menu">
+								<li><a class="menu-title" href="#">All Assistance Services</a></li>
+								<li><a href="#">Line Management</a></li>
+								<li><a href="#">Monitoring Costs & Payments</a></li>
+								<li><a href="#">Technical Support</a></li>
+								<li><a href="#">Smart Life Assistance</a></li>							
+							</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+</nav>
+				
 
+
+<!--END NAVBAR-->
 <!--SLIDESHOW-->
  <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 1300px; height: 400px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 400px; overflow: hidden;">
             <div data-p="225.00" style="display: none;">
-                <img data-u="image" src="../../images/slide1.png" />
+                <img data-u="image" src="../images/slide1.png" />
             </div>
             <div data-p="225.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image" src="../../images/slide2.jpg" />
+                <img data-u="image" src="../images/slide2.jpg" />
             </div>
 			<div data-p="225.00" data-po="80% 55%" style="display: none;">
-                <img data-u="image" src="../../images/slide4.jpg" />
+                <img data-u="image" src="../images/slide4.jpg" />
             </div>
         </div>
         <!-- Bullet Navigator -->
@@ -60,7 +130,6 @@
         <span data-u="arrowleft" class="jssora22l" style="top:0px;left:12px;width:40px;height:58px;" data-autocenter="2"></span>
         <span data-u="arrowright" class="jssora22r" style="top:0px;right:12px;width:40px;height:58px;" data-autocenter="2"></span>
     </div>
-<!--END SLIDER-->
 
 <!--NEW DEVICES-->
 	<div class="container">
@@ -77,7 +146,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/SAMSUNG_S7.jpg" alt=""></a>
+											<a href="#"><img src="../images/SAMSUNG_S7.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>Samsung</h4>
@@ -88,7 +157,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/iPhoneSE.jpg" alt=""></a>
+											<a href="#"><img src="../images/iPhoneSE.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>Apple</h4>
@@ -99,7 +168,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/huawei-p9.jpg" alt=""></a>
+											<a href="#"><img src="../images/huawei-p9.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>Huawei</h4>
@@ -115,7 +184,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/LG_G5.jpg" alt=""></a>
+											<a href="#"><img src="../images/LG_G5.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>LG</h4>
@@ -126,7 +195,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/Sony-xperiaX.jpg" alt=""></a>
+											<a href="#"><img src="../images/Sony-xperiaX.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>Sony</h4>
@@ -137,7 +206,7 @@
 								<li class="col-sm-4">
 									<div class="fff">
 										<div class="thumbnail">
-											<a href="#"><img src="../../images/apple-iPhone6s.jpg" alt=""></a>
+											<a href="#"><img src="../images/apple-iPhone6s.jpg" alt=""></a>
 										</div>
 										<div class="caption">
 											<h4>Apple</h4>
@@ -155,16 +224,15 @@
 		</div><!-- /#myCarousel -->
 	</div>
 </div>
-<!--END NEW DEVICES-->
-
+	
 <!--SPOTIFY AD-->
 	<div class="container">
 		<div class="adv">
-			<img src="../../images/girl-music.jpg" class="img-responsive">
+			<img src="../images/girl-music.jpg" class="img-responsive">
 			<div>
 				<h3> Spotify Premium </h3>
 				<div class="advtext">Subscribe to Spotify with us, you have access to milions of tracks, themed playlists and much more, at a great discount!
-				</div> <br>
+				</div> 
 				
 				<div class="row">
 					<div class="col three">				
@@ -175,11 +243,32 @@
 			
 		</div>
 	</div>
-<!--END SPOTIFY AD-->
 
 <!--FOOTER-->
-<div class="include" data-include="footer"></div>
+<div class="footer">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-4 col-xs-4"> 
+				<p>Copyright &copy; M-Mobile 2016</p>
+			</div>
+			<div class="col-sm-4 col-xs-4">
+				<h4> About M-Mobile </h4>
+				<ul>
+					<li><a href="#">M-Mobile Group</a></li>
+					<li><a href="#">News</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-4 col-xs-4">
+				<h4> Follow Us </h4>
+				<ul>
+					<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>&nbsp;Facebook</a></li>
+					<li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i>&nbsp;Twitter</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
 <!--END FOOTER-->
-
 </body>
+
 </html>
